# oculussdk

./: CMakeLists.txt  README.md
LibOVR/: CMakeLists.txt
LibOVR/Include/: OVR.h
Samples/OculusWorldDemo/: CMakeLists.txt
Samples/OculusWorldDemo/Release/: OculusWorldDemo_x86_64_Release
cmake/: defaults.cmake
cmake/pkgconfig/: OculusVR.in
